Add option to update HTML files (#4, #70)
Add new options for updating HTML files (#4, #70).